--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -4,17 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="#F6D0D0"
     android:orientation="vertical"
     tools:context=".OtherActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="50dp"
-        android:text="화면 이동 성공"
-        android:textColor="#FFFFFF"
+        android:gravity="center"
+        android:text="사용자 정보"
         android:textSize="30sp" />
 
     <LinearLayout
@@ -32,16 +31,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="사용자명"
-                android:textColor="@color/white" />
+                android:text="사용자명" />
 
             <TextView
                 android:id="@+id/getNameTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:textColor="@color/white" />
+                android:layout_weight="1" />
 
 
         </LinearLayout>
@@ -56,21 +53,66 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="전화번호"
-                android:textColor="@color/white" />
+                android:text="전화번호" />
 
             <TextView
                 android:id="@+id/getPhoneTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:textColor="@color/white" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="사용자 변경"
+        android:textSize="30sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="변경할 사용자명" />
+
+        <EditText
+            android:id="@+id/changeUserNameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="변경할 전화번호" />
+
+        <EditText
+            android:id="@+id/changeUserPhoneEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="phone" />
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/sendInfoButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="데이터 보내기" />
 
 
 </LinearLayout>
