--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -33,8 +33,8 @@
                 android:layout_weight="1"
                 android:text="사용자명" />
 
-            <TextView
-                android:id="@+id/getNameTextView"
+            <EditText
+                android:id="@+id/getNameEditText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -55,54 +55,14 @@
                 android:layout_weight="1"
                 android:text="전화번호" />
 
-            <TextView
-                android:id="@+id/getPhoneTextView"
+            <EditText
+                android:id="@+id/getPhoneEditText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1" />
 
         </LinearLayout>
-
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:text="사용자 변경"
-        android:textSize="30sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="변경할 사용자명" />
-
-        <EditText
-            android:id="@+id/changeUserNameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="변경할 전화번호" />
-
-        <EditText
-            android:id="@+id/changeUserPhoneEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="phone" />
 
 
     </LinearLayout>
